Fixed intro on mobile, edited styling in about for mobile, added card to experience section, changed code base for experience section.

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -85,6 +85,8 @@
 @media only screen and (max-width: 600px) {
   .about-me-card {
     font-size: 14px;
+    width: 100%;
+    max-width: 400px;
   }
 
   #about {
