--- a/src/styles/Experience.css
+++ b/src/styles/Experience.css
@@ -5,6 +5,29 @@
   padding-top: 100px;
 }
 
+.experience-content {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1024px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+
+.experience-card {
+  display: inline-block;
+  border-radius: 1rem;
+  width: 100%;
+  height: 100%;
+  margin: 0.5rem 1rem;
+  background-color: var(--cards);
+  border: 1px solid rgba(255, 255, 255, 0.03);
+  box-shadow: 0 12px 24px rgba(0, 0, 0, 0.3);
+  font-size: 16px;
+  padding: 1rem;
+}
+
 .joblist-job-title {
   font-family: "NTR", sans-serif;
   font-size: 32px;
@@ -95,6 +118,12 @@ ul {
   #experience {
     padding-left: unset;
     padding-right: unset;
+  }
+
+  .experience-card {
+    width: 100%;
+    height: auto;
+    margin: 0;
   }
 
   .css-ubhsqc {
