--- a/src/styles/Intro.css
+++ b/src/styles/Intro.css
@@ -59,7 +59,6 @@ b {
 
 @media only screen and (max-width: 600px) {
   #intro {
-    min-height: unset;
     padding-left: unset;
     padding-top: unset;
     margin: 0;
